k8s/infrastructure/configs/victoria-metrics-infra/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: reverse-proxy
      namespace: envoy-gateway-system
  hostnames:
    - 'grafana.${DOMAIN}'
  rules:
    - backendRefs:
        - name: stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm
  namespace: observability
spec:
  parentRefs:
    - name: reverse-proxy
      namespace: envoy-gateway-system
  hostnames:
    - 'vm.${DOMAIN}'
  rules:
    - backendRefs:
        - name: vmsingle-stack
          port: 8428
